--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,29 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.1.*"
+        "illuminate/support": "4.1.*",
+        "illuminate/database": "4.1.*",
+        "tlr/l4-support": "dev-master",
+        "tlr/l4-routing": "dev-master",
+        "illuminate/auth": "4.1.*"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/tedslittlerobot/l4-support"
+        },
+        {
+            "type": "git",
+            "url": "https://github.com/tedslittlerobot/l4-routing"
+        }
+    ],
     "autoload": {
-        "psr-0": {
-            "Tlr\\Auth": "src/classes/"
+        "psr-4": {
+            "Tlr\\Auth\\": "src/classes/"
         }
     },
-    "minimum-stability": "stable"
+    "minimum-stability": "stable",
+    "require-dev": {
+        "mockery/mockery": "dev-master"
+    }
 }
