--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,11 @@
         "php": ">=5.3.0",
         "illuminate/support": "4.1.*",
         "illuminate/database": "4.1.*",
-        "tlr/l4-support": "dev-master",
+        "tlr/l4-support": "1.*",
         "tlr/l4-routing": "dev-master",
         "illuminate/auth": "4.1.*"
     },
     "repositories": [
-        {
-            "type": "git",
-            "url": "https://github.com/tedslittlerobot/l4-support"
-        },
         {
             "type": "git",
             "url": "https://github.com/tedslittlerobot/l4-routing"
